<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardBerlin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="mostrarInfo"
            app:cardBackgroundColor="#22FA09"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/berl_n" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/Berlin"
                android:textColor="#FB0303" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardDenver"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="mostrarInfo"
            app:cardBackgroundColor="#22FA09"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/denver" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/Denver"
                android:textColor="#FB0303" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardProfesor"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="mostrarInfo"
            app:cardBackgroundColor="#22FA09"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/el_profesor" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profesor"
                android:textAlignment="center" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardMoscu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="mostrarInfo"
            app:cardBackgroundColor="#22FA09"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/mosc_" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Moscu"
                android:textAlignment="textStart"
                android:textAllCaps="false" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardRio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="mostrarInfo"
            app:cardBackgroundColor="#22FA09"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/r_o" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Rio"
                android:textAlignment="center" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardTokio"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="mostrarInfo"
            app:cardBackgroundColor="#22FA09"
            app:cardCornerRadius="30dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="10dp">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/tokio" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Tokio"
                android:textAlignment="center" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>